Updated UI and connected ComparadorPage.html with API